--- a/1-team-website/styles.css
+++ b/1-team-website/styles.css
@@ -1,25 +1,44 @@
-body {
-    background-color: black;
+ .inside{
+   color:blue;
+   size:5px;
+ }
+
+ body {
+    background-color: navy;
     font-family: "Arial Black", Helvetica, sans-serif;
     font-size: 2em;
     color: gold;
 }
 
  .button {
-    background-color: #000000;
-    color: white;
+    background-color: blue;
+    color: navy;
     cursor: pointer;
     font-family: Courier;
     font-size: 22pt;
     margin-left: 10px;
     padding: 5px 10px 5px 10px;
     font-style:italic;
+    text-decoration:none;
  }
 
  .button:hover {
-    background-color: black;
-    color: rgb(8, 7, 3);
-    box-shadow:0 4px 8px 0 rgba(0,0,0,0.2);
-    border:lime;
-    border-Width:2px;
+    background-color: blue;
+    color: gold;
+    box-sizing:border-box;
+    box-shadow:0px 50px 50px 0px rgba(0,0,0,0.2);
+    border:gold;
+    border-style:inset;
+    border-Width:5px;
+ }
+ .socialsDiv{
+   border:5px;
+   border
+   background-color:red;
+
+ }
+ iframe {
+   padding:10px 10px 10px 10px;
+   background-color: gold;
+   border:gold;
  }
