--- a/3-game/styles.css
+++ b/3-game/styles.css
@@ -1,9 +1,14 @@
-#title {
-    color:white;
-    border-width:5px;
-    border-color:white;  
+body {
+    background-color:white;
 }
 
-head {
-    background-color:red;
+
+#title {
+    fill:white;
+    font-size:50px;
+}
+
+.titleborder {
+    stroke:white;
+    stroke-width:5px;
 }
