--- a/3-game/styles.css
+++ b/3-game/styles.css
@@ -13,7 +13,15 @@ body {
     stroke-width:5px;
 }
 
+#roundabout {
+    fill:black;
+    stroke:white;
+    stroke-width:5px;
+}
 
+#point {
+    fill:white;
+}
 
 #mainmenu:hover {
     cursor:default;
