--- a/11-final-project/web/midnight.css
+++ b/11-final-project/web/midnight.css
@@ -16,6 +16,11 @@ body {
     animation-direction: alternate;
 }
 
+#Rooms {
+  stroke:white;
+  stroke-width:5;
+}
+
 #rayA {
   animation-duration: 5s;
   transform: rotate(45deg);
