--- a/11-final-project/web/midnight.css
+++ b/11-final-project/web/midnight.css
@@ -1,3 +1,8 @@
+
+/*
+Base Elements styling
+*/
+
 body {
     background-color: black;
 }
@@ -6,28 +11,64 @@ line {
   stroke:white;
 }
 
-#moon {
-    fill: black;
-    stroke: white;
-    stroke-width: 11;
-}
 
-.rays {
-    fill: url(#ray);
-    transform-origin:800px -100px;
-    animation-name: spin;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
 
 #Rooms {
   stroke:white;
   stroke-width:5;
 }
 
+.moonlit {
+    opacity: 0.5;
+}
+
+/*
+Text Stuff
+*/
+
 .settingtoptext {
   fill:white;
   font-size:45px;
+}
+.MenuText{
+  fill: url(#lighter);
+}
+.Savetxt{
+  fill: white;
+  font-size:75px;
+}
+
+/*
+Title Screen Navigation Buttons
+*/
+.ButtonBox{
+  opacity:0.5;
+}
+.ButtonBox:hover {
+  fill:rgb(72, 66, 66);
+  cursor: pointer;
+}
+
+/* 
+Player Styling
+*/
+
+#player {
+  fill:black;
+  stroke-width:2px;
+  stroke:white;
+}
+
+/*
+Animated Title Screen Rays
+*/
+
+.rays {
+    fill: url(#ray);
+    transform-origin:800px -100px;
+    animation-name: glow;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 #rayA {
@@ -47,11 +88,11 @@ line {
   transform: rotate(45deg);
 }
 
-.moonlit {
-    opacity: 0.5;
-}
+/*
+Animation Stuff
+*/
 
-@keyframes spin {
+@keyframes glow {
     0%   {opacity: 1;}
     100% {opacity: 0.2;}
   }
@@ -64,34 +105,3 @@ line {
   0%   {transform: rotate(0deg);}
   100% {transform: rotate(180deg);}
 } 
-.MenuText{
-  fill: url(#lighter);
-}
-#startBox{
-  opacity:0.5;
-}
-#startBox:hover {
-  fill:rgb(72, 66, 66);
-}
-#loadBox{
-  opacity:0.5;
-}
-#loadBox:hover {
-  fill:rgb(72, 66, 66);
-}
-#optionsBox{
-  opacity:0.5;
-}
-#optionsBox:hover {
-  fill:rgb(72, 66, 66);
-}
-
-/* 
-Player Styling
-*/
-
-#player {
-  fill:black;
-  stroke-width:2px;
-  stroke:white;
-}
