--- a/11-final-project/web/midnight.css
+++ b/11-final-project/web/midnight.css
@@ -20,6 +20,19 @@ line {
 }
 
 /*
+Objects Stuff
+*/
+
+#Bed {
+  fill:black;
+  stroke-width:3; 
+  stroke:white;
+}
+
+#Lamp {
+  fill:black
+}
+/*
 Text Stuff
 */
 
