--- a/3-game/styles.css
+++ b/3-game/styles.css
@@ -2,7 +2,6 @@ body {
     background-color:white;
 }
 
-
 .title {
     fill:white;
     font-size:50px;
@@ -25,7 +24,23 @@ body {
     font-size:20px;
 }
 
+.cannon{
+    cx:200;
+    cy:927;
+}
 
+#barrel {
+    width:25;
+    outline-style:solid;
+    outline-color:white;
+    outline-width:5px;
+    fill:black;
+}
+#sky {
+    width:100%;
+    height:100%;
+    background-image:linear-gradient(#303030, black);
+}
 #roundabout {
     fill:black;
     stroke:white;
